@@ -5,6 +5,7 @@ Pro 1.0.1
   and color picker components
 - MODELER-360: Command, Sensor, Switch names are
   not correctly encoded/decoded
+- MODELER-385: Double scrollbar on widget selection
 
 Designer 2.13.6 (2012-09-20 Rosemary)
 =====================================
